# home_pico_projects

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/lwip/: lwipopts.h
lib/ntp/: CMakeLists.txt  NtpClient.cpp  NtpClient.h
lib/sparkplug_client/: CMakeLists.txt  PicoSparkplugClient.cpp  PicoSparkplugClient.h
lib/tcp_client/: CMakeLists.txt  PicoTcpClient.cpp
projects/: CMakeLists.txt
projects/garage_door/: CMakeLists.txt
projects/garage_door/src/: door_control.c  door_control.h  main.cpp
projects/garden_bed/: CMakeLists.txt
projects/garden_bed/src/: main.cpp
projects/garden_shed/: CMakeLists.txt
projects/garden_shed/src/: Fields.h  Shed.cpp  Shed.h  VictronParser.cpp  VictronParser.h  enum.h  main.cpp
